noinst_LIBRARIES = lib/libsetplay.a

lib_libsetplay_a_SOURCES = setplay/setplayexception.h setplay/region.cc setplay/cbr.cc setplay/namesubstitutions.cc setplay/object.cc setplay/setplay.cc setplay/setplaymessage.cc setplay/clangaction.cc setplay/setplaymanager.cc setplay/parameter.cc setplay/util.cc setplay/cond.cc setplay/playerReference.cc setplay/directive.cc setplay/clang/arithop.cc setplay/clang/clangutil.cc setplay/clang/compop.cc setplay/clang/hasa.h setplay/clang/vector.h setplay/clang/visitor.cc setplay/clang/arithop.h setplay/clang/clangutil.h setplay/clang/compop.h setplay/clang/rcssexceptions.h setplay/clang/version.h setplay/clang/visitor.h

lib_libsetplay_a_CXXFLAGS= -Wno-deprecated
